--- a/index.html
+++ b/index.html
@@ -1,54 +1,65 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arafat Nabil Mahi | Portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-        tailwind.config = {
-            darkMode: 'class',
-            theme: {
-                extend: {
-                    colors: {
-                        dark: {
-                            bg: '#0a192f',
-                            card: '#112240',
-                            text: '#ccd6f6'
-                        }
-                    }
-                }
-            }
-        }
-    </script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
     <style>
         body {
             font-family: 'Inter', sans-serif;
-            scroll-behavior: smooth;
-            transition: background-color 0.3s ease, color 0.3s ease;
-        }
-        .dark body {
-            background-color: #0a192f;
-            color: #ccd6f6;
         }
     </style>
-<script type="importmap">
-{
-  "imports": {
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "react/": "https://esm.sh/react@^19.2.4/",
-    "react": "https://esm.sh/react@^19.2.4"
-  }
-}
-</script>
-<link rel="stylesheet" href="/index.css">
 </head>
-<body class="bg-slate-50 text-slate-900 transition-colors duration-300">
-    <div id="root"></div>
-<script type="module" src="/index.tsx"></script>
+
+<body class="bg-slate-50 text-slate-900">
+
+    <!-- Hero Section -->
+    <section class="min-h-screen flex items-center justify-center text-center px-6">
+        <div>
+            <h1 class="text-4xl md:text-6xl font-bold mb-6">
+                Arafat Nabil Mahi
+            </h1>
+
+            <p class="text-lg md:text-xl text-slate-600 mb-8">
+                Web Developer | Portfolio Website
+            </p>
+
+            <a href="#projects" 
+               class="bg-blue-600 text-white px-6 py-3 rounded-lg shadow hover:bg-blue-700 transition">
+               View Projects
+            </a>
+        </div>
+    </section>
+
+    <!-- Projects Section -->
+    <section id="projects" class="py-20 bg-slate-100 text-center">
+        <h2 class="text-3xl font-semibold mb-10">Projects</h2>
+
+        <div class="max-w-4xl mx-auto grid md:grid-cols-2 gap-8 px-6">
+            
+            <div class="bg-white p-6 rounded-lg shadow">
+                <h3 class="text-xl font-semibold mb-2">Project One</h3>
+                <p class="text-slate-600">Your project description goes here.</p>
+            </div>
+
+            <div class="bg-white p-6 rounded-lg shadow">
+                <h3 class="text-xl font-semibold mb-2">Project Two</h3>
+                <p class="text-slate-600">Your project description goes here.</p>
+            </div>
+
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="py-6 text-center text-slate-500">
+        © 2026 Arafat Nabil Mahi
+    </footer>
+
 </body>
 </html>
+
